k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: floodit
  namespace: floodit
  labels:
    app: floodit
spec:
  selector:
    matchLabels:
      app: floodit
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: floodit
    spec:
      containers:
        - name: floodit
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: floodit-artifacts-volume
              mountPath: /usr/share/nginx/html
            - name: floodit-nginx-config-volume
              mountPath: /etc/nginx
      volumes:
        - name: floodit-artifacts-volume
          configMap:
            name: floodit-artifacts
        - name: floodit-nginx-config-volume
          configMap:
            name: floodit-nginx-config

---
apiVersion: v1
kind: Service
metadata:
  name: floodit-service
  namespace: floodit
spec:
  selector:
    app: floodit
  ports:
    - protocol: TCP
      port: 80
