k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: floodit-ingress
  namespace: floodit
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /floodit
        pathType: Prefix
        backend:
          service:
            name: floodit-service
            port:
              number: 80
